Cards appears random // OK

--- a/GAME SET/index.html
+++ b/GAME SET/index.html
@@ -16,39 +16,39 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="css/reset.css">
-  <title>bootstrap</title>
+  <title>SET! Game</title>
 </head>
 <body>
 
     <div class="container-fluid">
       <div class="row">
         <div class="col-sx-12 col-sm-12 col-md-8 board-game">
-          <div class="container-fluid">
+          <div class="container-fluid container1">
             <div class="row">
               <div class="hidden-xs hidden-sm col-md-2"></div>
-              <div class="col-xs-3 col-sm-3 col-md-2">
-                <div class="card" id="card-11"><img src="img/pic-01.png"></div>
-                <div class="card" id="card-21"><img src="img/pic-50.png"></div>
-                <div class="card" id="card-31"><img src="img/pic-43.png"></div>
-                <div class="card" id="card-41"><img src="img/pic-12.png"></div>
+              <div class="col-xs-3 col-sm-3 col-md-2" id="hand">
+                <div class="card" id="0"></div>
+                <div class="card" id="1"></div>
+                <div class="card" id="2"></div>
+                <div class="card" id="3"></div>
               </div>
               <div class="col-xs-3 col-sm-3 col-md-2">
-                <div class="card" id="card-12"><img src="img/pic-08.png"></div>
-                <div class="card" id="card-22"><img src="img/pic-28.png"></div>
-                <div class="card" id="card-32"><img src="img/pic-30.png"></div>
-                <div class="card" id="card-42"><img src="img/pic-42.png"></div>
+                <div class="card" id="4"></div>
+                <div class="card" id="5"></div>
+                <div class="card" id="6"></div>
+                <div class="card" id="7"></div>
               </div>
               <div class="col-xs-3 col-sm-3 col-md-2">
-                <div class="card" id="card-13"><img src="img/pic-27.png"></div>
-                <div class="card" id="card-23"><img src="img/pic-38.png"></div>
-                <div class="card" id="card-33"><img src="img/pic-19.png"></div>
-                <div class="card" id="card-43"><img src="img/pic-14.png"></div>
+                <div class="card" id="8"></div>
+                <div class="card" id="9"></div>
+                <div class="card" id="10"></div>
+                <div class="card" id="11"></div>
               </div>
               <div class="col-xs-3 col-sm-3 col-md-2">
-                <div class="card" id="card-14"><img src="img/pic-17.png"></div>
-                <div class="card" id="card-24"><img src="img/pic-37.png"></div>
-                <div class="card" id="card-34"><img src="img/pic-52.png"></div>
-                <div class="card" id="card-44"><img src="img/pic-36.png"></div>
+                <div class="card" id="12"></div>
+                <div class="card" id="13"></div>
+                <div class="card" id="14"></div>
+                <div class="card" id="15"></div>
               </div>
               <div class="hidden-xs hidden-sm col-md-2"></div>
             </div>
@@ -67,5 +67,6 @@
     </div>
 
   <script src="js/app.js"></script>
+  <script src="js/index.js"></script>
 </body>
 </html>
