--- a/GAME SET/index.html
+++ b/GAME SET/index.html
@@ -66,7 +66,10 @@
       </div>
     </div>
 
+
+  
   <script src="js/app.js"></script>
   <script src="js/index.js"></script>
+  <script src="js/deck.js"></script>
 </body>
 </html>
