you can actually play!

--- a/GAME SET/index.html
+++ b/GAME SET/index.html
@@ -66,8 +66,11 @@
       </div>
     </div>
 
+    <!-- <input type="button" value="PLAY"  onclick="play()">
+    <audio id="audio" src="http://dev.interactive-creation-works.net/1/1.ogg" ></audio> -->
 
-  
+
+
   <script src="js/app.js"></script>
   <script src="js/index.js"></script>
   <script src="js/deck.js"></script>
