--- a/GAME SET/index.html
+++ b/GAME SET/index.html
@@ -54,11 +54,12 @@
             luctus, eros tortor viverra libero, a eleifend lorem felis
             sit amet sem. Sed et viverra nulla, finibus pulvinar nunc.</p>
 
-            <h3>Result : </h3><h3 id="win-loose" class="result"><span> </span></h3>
-            <div class="score"><h3>Score :</3></div>
+            <h3>Result : </h3><h3 id="win-loose" class="result"><span></span></h3>
         </div>
       </div>
     </div>
+
+    <audio id="audio" src"sounds/sms-alert-1-daniel_simon.mp3" preload="auto"></audio>
 
     <!-- <input type="button" value="PLAY"  onclick="play()">
     <audio id="audio" src="http://dev.interactive-creation-works.net/1/1.ogg" ></audio> -->
