with some sounds

--- a/GAME SET/index.html
+++ b/GAME SET/index.html
@@ -11,6 +11,8 @@
 </head>
 <body>
 
+  <!-- <div class="intro">Initial instructions</div> -->
+
     <div class="container-fluid">
       <div class="row">
         <div class="col-sx-12 col-sm-12 col-md-8 board-game">
@@ -59,7 +61,6 @@
       </div>
     </div>
 
-    <audio id="audio" src"sounds/sms-alert-1-daniel_simon.mp3" preload="auto"></audio>
 
     <!-- <input type="button" value="PLAY"  onclick="play()">
     <audio id="audio" src="http://dev.interactive-creation-works.net/1/1.ogg" ></audio> -->
