--- a/GAME SET/index.html
+++ b/GAME SET/index.html
@@ -49,12 +49,8 @@
         </div>
         <div class="col-xs-12 col-sm-12 col-md-4">
           <h1>Set Game!</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Mauris diam ex, congue sit amet nunc ut, sodales finibus
-            tellus. Donec efficitur posuere rutrum. Duis rhoncus enim
-            quis mi placerat lacinia. Aenean cursus, neque vitae mattis
-            luctus, eros tortor viverra libero, a eleifend lorem felis
-            sit amet sem. Sed et viverra nulla, finibus pulvinar nunc.</p>
+          <p>Inspired in the 70's Set card game, this renewed version of SET GAME challenge your visual acuity
+             </p>
 
             <h3>Result : </h3><h3 id="win-loose" class="result"><span></span></h3>
         </div>
