--- a/GAME SET/index.html
+++ b/GAME SET/index.html
@@ -18,41 +18,69 @@
         <div class="col-sx-12 col-sm-12 col-md-8 board-game">
           <div class="container-fluid container1">
             <div class="row">
-              <div class="hidden-xs hidden-sm col-md-2"></div>
-              <div class="col-xs-3 col-sm-3 col-md-2" id="hand">
+              <div class="col-xs-3 col-sm-3 col-md-2">
                 <div class="card" id="0"></div>
                 <div class="card" id="1"></div>
                 <div class="card" id="2"></div>
                 <div class="card" id="3"></div>
-              </div>
-              <div class="col-xs-3 col-sm-3 col-md-2">
                 <div class="card" id="4"></div>
+              </div>
+              <div class="col-xs-3 col-sm-3 col-md-2" id="hand">
                 <div class="card" id="5"></div>
                 <div class="card" id="6"></div>
                 <div class="card" id="7"></div>
-              </div>
-              <div class="col-xs-3 col-sm-3 col-md-2">
                 <div class="card" id="8"></div>
                 <div class="card" id="9"></div>
-                <div class="card" id="10"></div>
-                <div class="card" id="11"></div>
               </div>
               <div class="col-xs-3 col-sm-3 col-md-2">
+
+                <div class="card" id="10"></div>
+                <div class="card" id="11"></div>
                 <div class="card" id="12"></div>
                 <div class="card" id="13"></div>
                 <div class="card" id="14"></div>
-                <div class="card" id="15"></div>
               </div>
-              <div class="hidden-xs hidden-sm col-md-2"></div>
+              <div class="col-xs-3 col-sm-3 col-md-2">
+                <div class="card" id="15"></div>
+                <div class="card" id="16"></div>
+                <div class="card" id="17"></div>
+                <div class="card" id="18"></div>
+                <div class="card" id="19"></div>
+
+              </div>
+              <div class="col-xs-3 col-sm-3 col-md-2">
+                <div class="card" id="20"></div>
+                <div class="card" id="21"></div>
+                <div class="card" id="22"></div>
+                <div class="card" id="23"></div>
+                <div class="card" id="24"></div>
+              </div>
+              <div class="col-xs-3 col-sm-3 col-md-2">
+                <div class="card" id="25"></div>
+                <div class="card" id="26"></div>
+                <div class="card" id="27"></div>
+                <div class="card" id="28"></div>
+                <div class="card" id="29"></div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-4">
+        <div class="col-hidden-xs col-hidden-sm col-md-4">
           <h1>Set Game!</h1>
           <p>Inspired in the 70's Set card game, this renewed version of SET GAME challenge your visual acuity
-             </p>
+             and tone up your pattern recognition.</p>
+             <p>To claim SET you must find three cards that satisfy ALL of <span>these conditions.<span></p>
 
-            <h3>Result : </h3><h3 id="win-loose" class="result"><span></span></h3>
+              <h3>Instructions :</h3>
+                They all have the same number, or they have <br> 3 different numbers.<br><br>
+                They all have the same symbol, or they have <br> 3 different symbols.<br><br>
+                They all have the same shading, or they have <br> 3 different shadings.<br><br>
+                They all have the same color, or they have <br> 3 different colors.<br><br>
+
+              <h3>Score : <span id="score"></span> pt</h3>
+              <h3 id="win-loose" class="result"><span></span></h3>
+
+
         </div>
       </div>
     </div>
