Retouched text instructions

--- a/GAME SET/index.html
+++ b/GAME SET/index.html
@@ -72,10 +72,10 @@
              <p>To claim SET you must find three cards that satisfy ALL of <span>these conditions.<span></p>
 
               <h3>Instructions :</h3>
-                They all have the same number, or they have <br> 3 different numbers.<br><br>
-                They all have the same symbol, or they have <br> 3 different symbols.<br><br>
-                They all have the same shading, or they have <br> 3 different shadings.<br><br>
                 They all have the same color, or they have <br> 3 different colors.<br><br>
+                They all have the same size, or they have <br> 3 different sizes.<br><br>
+                They all have the same fill, or they have <br> 3 different fills.<br><br>
+                They all have the same border, or they have <br> 3 different borders.<br><br>
 
               <h3>Score : <span id="score"></span> pt</h3>
               <h3 id="win-loose" class="result"><span></span></h3>
