--- a/GAME SET/index.html
+++ b/GAME SET/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <link href="css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <link rel="stylesheet" href="css/reset.css">
   <title>SET! Game</title>
 </head>
@@ -13,6 +14,7 @@
 
   <!-- <div class="intro">Initial instructions</div> -->
 
+<div id="final">Nice Game! <br> Wanna try <a href="file:///Users/juliapolbach/Ironhack/GAME%20SET%20more%20rows/index.html">again?</a></div>
     <div class="container-fluid">
       <div class="row">
         <div class="col-sx-12 col-sm-12 col-md-8 board-game">
@@ -79,7 +81,7 @@
 
               <h3>Score : <span id="score"></span> pt</h3>
               <h3 id="win-loose" class="result"><span></span></h3>
-
+              <h3 id="time"></h3>
 
         </div>
       </div>
