--- a/GAME SET/index.html
+++ b/GAME SET/index.html
@@ -14,7 +14,7 @@
 
   <!-- <div class="intro">Initial instructions</div> -->
 
-<div id="final">Nice Game! <br> Wanna try <a href="file:///Users/juliapolbach/Ironhack/GAME%20SET%20more%20rows/index.html">again?</a></div>
+<div id="final">Nice Game! <br> Wanna try <a href="https://juliapolbach.github.io/Set-Game/GAME%20SET/index.html">again?</a></div>
     <div class="container-fluid">
       <div class="row">
         <div class="col-sx-12 col-sm-12 col-md-8 board-game">
